microservices-project/infrastructure/traefik/user-service-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: user-service-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`user-service.local`)
      kind: Rule
      services:
        - name: user-service
          port: 80
